8181055: PPC64: "mbind: Invalid argument" still seen after 8175813

Use numa_interleave_memory v2 api when available

Reviewed-by: dholmes, shade, gromero